--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,10 +24,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-events"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Settings" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/settings">
-    <ion-nav-view name='settings'></ion-nav-view>
+  <ion-tab title="Settings" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/settings">
+    <ion-nav-view name='tab-settings'></ion-nav-view>
   </ion-tab>
-  
+
   <!-- Logout Button -->
 <!--   <ion-tab title="Logout" icon-off="ion-android-exit" icon-on="ion-android-exit" ng-controller="AuthenticationController as vm" ng-click="vm.logout()">
   </ion-tab> -->
