Make activities list scrollable and rename cancel button

--- a/www/templates/eventModal.html
+++ b/www/templates/eventModal.html
@@ -1,11 +1,12 @@
 <ion-modal-view id="event--modal--wrapper">
   <ion-header-bar class="bar bar-header">
-    <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
-    <h1>Choose Activities</h1>
+    <button class="button button-clear button-primary" ng-click="modal.hide()">Done</button>
   </ion-header-bar>
-  <ul class="list">
-    <li class="item" ng-repeat="activity in vm.activities | filter:search | orderBy:activity">{{activity.title}}
-      <input type="checkbox" ng-model="activity.model">
-    </li>
-  </ul>
+  <ion-content>
+    <ul class="list">
+      <li class="item" ng-repeat="activity in vm.activities | filter:search | orderBy:activity">{{activity.title}}
+        <input type="checkbox" ng-model="activity.model">
+      </li>
+    </ul>
+  </ion-content>
 </ion-modal-view>
