--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1071,7 +1071,7 @@ input[type=date], input[type=time] {
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 #event--content {
-  margin-top: 85%;
+  margin-top: 87%;
 }
 
 #event--description {
@@ -1216,6 +1216,10 @@ input[type=date], input[type=time] {
   font-size: 1.2rem;
   line-height: 2rem;
   color: #aaa;
+}
+
+#group__buttons {
+  margin-top: 20px;
 }
 
 
