--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -22,9 +22,11 @@
       <h2>Number of People:</h2>
       <p>{{vm.numPeople}}</p>
     </div>
-    <a id="event__group--chat" href="#/chat/{{vm.eventId}}">Group Chat</a>
-    <div class="event__group--join" ng-click="vm.joinEvent()" ng-hide="vm.joined"><p class="event__group--text">JOIN</p></div>
-    <div class="event__group--join" id="joined" ng-click="vm.unjoinEvent()" ng-show="vm.joined"><p class="event__group--text">LEAVE</p></div>
+    <div id="group__buttons">
+      <a id="event__group--chat" href="#/chat/{{vm.eventId}}">Group Chat</a>
+      <div class="event__group--join" ng-click="vm.joinEvent()" ng-hide="vm.joined"><p class="event__group--text">JOIN</p></div>
+      <div class="event__group--join" id="joined" ng-click="vm.unjoinEvent()" ng-show="vm.joined"><p class="event__group--text">LEAVE</p></div>
+    </div>
   </div>
 
 
