--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -12,7 +12,7 @@
           <div class="ion-alert rightButton"></div>
         </ion-item>
 
-        <ion-item class="item-remove-animate item-avatar item-icon-right search--item" ng-repeat="friend in vm.friends | filter:query" type="item-text-wrap" href="#/profile/{{friend.id}}" >
+        <ion-item class="item-avatar item-icon-right search--item" ng-repeat="friend in vm.friends | filter:query" type="item-text-wrap" href="#/profile/{{friend.id}}" >
           <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
           <h2 id="search--username">{{friend.displayName}}</h2>
           <button class='friendChat' ng-hide="blocked" id='bubblify--2'>
