--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -37,7 +37,7 @@
         <h2>{{attendee.displayName}}</h2>
         <span class="search--activity" ng-repeat='interest in attendee.interests'>{{interest.activity}} &nbsp;</span>
         <button class='friendChat' ng-hide="blocked" id='bubblify--2'>
-          <a href="#/messages/{{attendee.id}}" class='ion-chatbubble-working' id='bubblify--2' ng-hide="attendee.me"></a>
+          <a href="#/messages/{{attendee.uid}}" class='ion-chatbubble-working' id='bubblify--2' ng-hide="vm.isUser(attendee.uid)"></a>
         </button>
       </ion-item>
     </ion-list>
