Fix refactor for reject friend request

--- a/www/templates/friendRequests.html
+++ b/www/templates/friendRequests.html
@@ -8,7 +8,7 @@
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="friend in vm.friendRequests" class="item-remove-animate item-avatar item-icon-right friend--lower">
-        <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
+        <img ng-src="data:image/png;base64,{{friend.profilepicture}}" style="width: 64px; height: 64px">
         <h2>{{friend.displayName}}</h2>
         <button class="ion-checkmark-round rightButton" ng-click="vm.acceptRequest(friend)"></button>
         <button class="ion-close-round rightButton" ng-click="vm.rejectRequest(friend)"></button>
