--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -13,7 +13,7 @@
         </ion-item>
 
         <ion-item class="item-avatar item-icon-right search--item" ng-repeat="friend in vm.friends | filter:query" type="item-text-wrap" href="#/profile/{{friend.uid}}" >
-          <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
+          <img ng-src="data:image/png;base64,{{friend.profilepicture}}" style="width: 64px; height: 64px">
           <h2 id="search--username">{{friend.displayName}}</h2>
           <button class='friendChat' ng-hide="blocked" id='bubblify--2'>
             <a href="#/messages/{{friend.uid}}" class='ion-chatbubble-working' id='bubblify--2'></a>
